[package]
name = "sdl_image"
version = "0.3.6"
authors = [
	"Brian Anderson <banderson@mozilla.com>",
	"Kang Seonghoon <public+rust@mearie.org>"
]

description = "SDL_image binding"
homepage = "https://github.com/brson/rust-sdl"
repository = "https://github.com/brson/rust-sdl"
license = "MIT"

[lib]
name = "sdl_image"
path = "lib.rs"

[dependencies.sdl]
path = "../.."

[dependencies]
libc = "0.1"
